<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".DetailFilmActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/ghibli_color_toolbar"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/image_film_detail"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_margin="16dp"
        android:adjustViewBounds="true"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        tools:src="@drawable/castle_poster"/>

    <TextView
        android:id="@+id/title_film_detail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:autoSizeTextType="uniform"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toRightOf="@id/image_film_detail"
        app:layout_constraintRight_toLeftOf="@id/liked_button_detail"
        app:layout_constraintTop_toTopOf="@id/image_film_detail"
        tools:text="@string/test_title" />

    <ToggleButton
        android:id="@+id/liked_button_detail"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_margin="16dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/toggle_selector"
        android:onClick="onClickAddFavoriteFilm"
        android:textOff=""
        android:textOn=""
        app:layout_constraintLeft_toRightOf="@id/title_film_detail"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/image_film_detail" />

    <TextView
        android:id="@+id/released_date_detail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="8dp"
        android:textSize="15sp"
        app:layout_constraintLeft_toRightOf="@id/image_film_detail"
        app:layout_constraintTop_toBottomOf="@id/title_film_detail"
        tools:text="@string/test_date" />

    <TextView
        android:id="@+id/productor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Producteur :"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="8dp"
        android:textSize="15sp"
        app:layout_constraintLeft_toRightOf="@id/image_film_detail"
        app:layout_constraintTop_toBottomOf="@id/released_date_detail"/>

    <TextView
        android:id="@+id/produtor_detail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:textSize="15sp"
        app:layout_constraintLeft_toRightOf="@id/productor"
        app:layout_constraintTop_toBottomOf="@id/released_date_detail"
        app:layout_constraintRight_toRightOf="parent"
        tools:text="@string/test_producteur" />

    <TextView
        android:id="@+id/director"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Directeur :"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="16dp"
        android:textSize="15sp"
        android:autoSizeTextType="uniform"
        app:layout_constraintLeft_toRightOf="@id/image_film_detail"
        app:layout_constraintTop_toBottomOf="@id/produtor_detail"/>

    <TextView
        android:id="@+id/director_detail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"

        android:layout_marginRight="8dp"
        android:layout_marginBottom="16dp"
        android:textSize="15sp"
        android:autoSizeTextType="uniform"
        app:layout_constraintLeft_toRightOf="@id/director"
        app:layout_constraintTop_toTopOf="@id/director"
        app:layout_constraintRight_toRightOf="parent"
        tools:text="@string/test_directeur" />

    <TextView
        android:id="@+id/description_film_detail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:scrollbars="vertical"
        android:padding="8dp"
        android:textSize="20sp"
        android:textAlignment="gravity"
        app:layout_constraintTop_toBottomOf="@id/director_detail"
        tools:text="@string/test_description" />


</androidx.constraintlayout.widget.ConstraintLayout>